Use emph for titles in related works section of slides

--- a/generative-ai/diffusion/HairStep/slides/related-works.tex
+++ b/generative-ai/diffusion/HairStep/slides/related-works.tex
@@ -4,7 +4,7 @@
 \begin{frame}\frametitle{Related Works}
     \framesubtitle{HairNet}
 
-    \normalsize{\textcolor{myBlue}{\textit{Single-View Hair Reconstruction using Convolutional Neural Networks}}}
+    \normalsize{\textcolor{myBlue}{\emph{Single-View Hair Reconstruction using Convolutional Neural Networks}}}
     
     \begin{figure}[ht]
         \centering
@@ -19,7 +19,7 @@
 \begin{frame}\frametitle{Related Works}
     \framesubtitle{3D Hair Synthesis}
 
-    \normalsize{\textcolor{myBlue}{\textit{3D Hair Synthesis using Volumetric Variational Autoencoders}}}
+    \normalsize{\textcolor{myBlue}{\emph{3D Hair Synthesis using Volumetric Variational Autoencoders}}}
     
     \begin{figure}[ht]
         \centering
@@ -34,7 +34,7 @@
 \begin{frame}\frametitle{Related Works}
     \framesubtitle{NeuralHDHair}
 
-    \normalsize{\textcolor{myBlue}{\textit{NeuralHDHair: Automatic High-fidelity Hair Modeling from a Single Image Using Implicit Neural Representations}}}
+    \normalsize{\textcolor{myBlue}{\emph{NeuralHDHair: Automatic High-fidelity Hair Modeling from a Single Image Using Implicit Neural Representations}}}
     
     \begin{figure}[ht]
         \centering
