Update slide title for clarity on 3D hair reconstruction task

--- a/generative-ai/diffusion/HairStep/slides/task-intro.tex
+++ b/generative-ai/diffusion/HairStep/slides/task-intro.tex
@@ -1,6 +1,6 @@
 \newSection{Objective}
 \begin{frame}
-    \frametitle{Objective: Single-view 3D Hair Modeling}
+    \frametitle{3D Hair Reconstruction from a Single Image}
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.8\linewidth]{assets/figures/task-intro.png}
