Add reference for single-image depth perception in the wild

--- a/generative-ai/diffusion/HairStep/references.bib
+++ b/generative-ai/diffusion/HairStep/references.bib
@@ -59,3 +59,11 @@ year={2022}
   pages={1 - 9},
   url={https://api.semanticscholar.org/CorpusID:18205814}
 }
+
+@article{chen2016single,
+	title={Single-image depth perception in the wild},
+	author={Chen, Weifeng and Fu, Zhao and Yang, Dawei and Deng, Jia},
+	journal={Advances in neural information processing systems},
+	volume={29},
+	year={2016}
+}
