Improve formatting of table entries in experiments slide for clarity

--- a/generative-ai/diffusion/HairStep/slides/experiments.tex
+++ b/generative-ai/diffusion/HairStep/slides/experiments.tex
@@ -468,9 +468,9 @@
             \rowcolor{myLightBlue}
             Method & IoU $\uparrow$ & \emph{HairSale} $\downarrow$ & \emph{HairRida} $\uparrow$ \\
             \hline
-            $C_0$ & 77.75\% & 16.03 \textcolor{blue}{(-18.2\%)} & 73.57\% \\
-            $C_1$ & 77.11\% & 16.54 \textcolor{blue}{(-15.6\%)} & 75.80\% \\
-            Full & \textbf{77.22\%} & \textbf{16.36} \textcolor{blue}{(-16.5\%)} & \textbf{76.79\%} \\
+            $\mathbf{C_0}$ & 77.75\% & 16.03 \textcolor{blue}{(-18.2\%)} & 73.57\% \\
+            $\mathbf{C_1}$ & 77.11\% & 16.54 \textcolor{blue}{(-15.6\%)} & 75.80\% \\
+            \textbf{Full} & \textbf{77.22\%} & \textbf{16.36} \textcolor{blue}{(-16.5\%)} & \textbf{76.79\%} \\
             \hline
         \end{tabularx}
         \caption{Ablation study: Evaluating depth estimation methods within the \emph{HairStep} framework.}
