Refactor motivation slide to remove duplicate content and clarify orientation maps challenges

--- a/generative-ai/diffusion/HairStep/slides/motivation.tex
+++ b/generative-ai/diffusion/HairStep/slides/motivation.tex
@@ -3,22 +3,6 @@
 %---------------------------------------------------------
 \begin{frame}[t]{Motivation}
     \textbf{Main Challenge:} Using synthetic data as a prior for real-world 3D hair modeling introduces a domain gap.
-\end{frame}
-
-%---------------------------------------------------------
-\begin{frame}[t]{Motivation}
-    \textbf{Main Challenge:} Using synthetic data as a prior for real-world 3D hair modeling introduces a domain gap.
-
-    \vspace{1em}
-    \textbf{Existing Solutions:} 
-    \begin{itemize}
-        \item Utilize undirected 2D orientation maps as an intermediate representation between the input image and the 3D hair model.
-    \end{itemize}
-\end{frame}
-
-%---------------------------------------------------------
-\begin{frame}[t]{Motivation}
-    \textbf{Main Challenge:} Using synthetic data as a prior for real-world 3D hair modeling introduces a domain gap.
 
     \vspace{1em}
     \textbf{Existing Solutions:} 
@@ -35,7 +19,7 @@
 \end{frame}
 
 %---------------------------------------------------------
-\begin{frame}{Orientation Maps Challenges}
+\begin{frame}{Undirected Orientation Maps Challenges}
     \begin{figure}
         \centering
         \includegraphics[width=0.9\linewidth]{assets/figures/motivations/orientation-map.png}
