--- a/generative-ai/diffusion/HairStep/main.tex
+++ b/generative-ai/diffusion/HairStep/main.tex
@@ -7,8 +7,6 @@
 
 \input{slides/titlepage}
 
-
-
 % Metadata
 \newcommand{\paperTitle}{HairStep: Transfer Synthetic to Real Using Strand and Depth Maps for Single-View 3D Hair Modeling}
 \newcommand{\paperAuthors}{Y. Zheng, Z. Jin, M. Li, H. Huang, C. Ma, S. Cui, and X. Han}
@@ -17,17 +15,14 @@
 \newcommand{\paperConference}{Computer Vision and Pattern Recognition}
 \newcommand{\paperConferenceAbbreviation}{CVPR}
 
-
 \newcommand{\presentor}{Alireza Heidari}
 \newcommand{\presentationDate}{December 2024}
-
 
 \title[Paper Presentation]{\paperTitle}
 \author{Alireza Heidari}
 \institute{Simon Fraser University}
 \date[December 2024]{\paperConference, \paperPublishedYear}
 
-% Document
 \begin{document}
 
 % Title Page
@@ -35,8 +30,7 @@
     \titlepage
 \end{frame}
 
-
-% Outline frame
+% Outline Frame
 \include{slides/contents}
 
 % Main Content
@@ -44,19 +38,12 @@
 % Slide Content
 % -------------------------------
 \include{slides/task-intro}
-
 \include{slides/related-works}
-
 \include{slides/motivation}
-
 \include{slides/contribution}
-
 \include{slides/method}
-
 \include{slides/experiments}
-
 \include{slides/conclusion}
-
 \include{slides/reference}
 
 \end{document}
