--- a/generative-ai/diffusion/HairStep/slides/method.tex
+++ b/generative-ai/diffusion/HairStep/slides/method.tex
@@ -1,4 +1,4 @@
-\newSection{Method}
+\newSection{Proposed Method}
 
 %---------------------------------------------------------
 \subsection{HairStep Representation}
