--- a/generative-ai/diffusion/HairStep/references.bib
+++ b/generative-ai/diffusion/HairStep/references.bib
@@ -67,3 +67,13 @@ year={2022}
 	volume={29},
 	year={2016}
 }
+
+
+@inproceedings{
+saberi2024outofdomain,
+title={Out-Of-Domain Unlabeled Data Improves Generalization},
+author={seyed amir hossein saberi and Amir Najafi and Alireza Heidari and Mohammad Hosein Movasaghinia and Abolfazl Motahari and Babak Khalaj},
+booktitle={The Twelfth International Conference on Learning Representations},
+year={2024},
+url={https://openreview.net/forum?id=Bo6GpQ3B9a}
+}
